# nrf-projects

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig.nrf  README.md  west.yaml  west.yml
applications/blinds/: CMakeLists.txt  Kconfig
applications/blinds/configuration/nrf52840_pca10059/: app_ZDebug.conf  app_ZDebugMCUBoot.conf  app_ZDebugWithShell.conf  app_ZRelease.conf  app_ZReleaseMCUBoot.conf  port_state_def.h
applications/blinds/src/: main.c
applications/blinds/src/events/: CMakeLists.txt  Kconfig  module_state_event.c
applications/blinds/src/hw_interface/: CMakeLists.txt  Kconfig  board.c
applications/controller/configuration/common/: hid_report_desc.c  hid_report_desc.h  key_id.h  led_state.h
applications/controller/configuration/nrf52_adafruit_feather/: app_ZDebug.conf  app_ZRelease.conf  battery_def.h  dts.overlay  hid_keymap_def.h  led_state_def.h  leds_def.h
applications/controller/src/events/: CMakeLists.txt  Kconfig  ble_event.c  click_event.h  config_event.h  hid_event.c  hid_event.h  hids_event.c  led_event.h  motion_event.c  motion_event.h  selector_event.c  selector_event.h  usb_event.c  wheel_event.c
applications/controller/src/hw_interface/: CMakeLists.txt  Kconfig  Kconfig.battery_meas  Kconfig.buttons  battery_meas.c  board.c  buttons.c  leds.c
applications/controller/src/modules/: CMakeLists.txt  Kconfig  Kconfig.bas  Kconfig.config_channel  Kconfig.hids  Kconfig.led_state  Kconfig.power_manager  Kconfig.shell  bas.c  ble_adv.c  ble_qos.c  ble_scan.c  dev_descr.c
applications/controller/src/util/: CMakeLists.txt  config_channel.h
applications/hid_controller/: CMakeLists.txt  Kconfig
applications/hid_controller/configuration/common/: click_detector.h  dev_descr.h  gpio_pins.h  hid_keymap.h  hid_report_consumer_ctrl.h  hid_report_desc.c  hid_report_desc.h  hid_report_keyboard.h  hid_report_mouse.h  hid_report_system_ctrl.h  hid_report_user_config.h  key_id.h  led_effect.h  led_state.h  passkey_buttons.h  port_state.h  selector_hw.h
applications/hid_controller/src/: main.c
applications/mesh_bridge/: CMakeLists.txt  Kconfig  particle_argon.overlay  prj.conf
applications/mesh_bridge/src/: main.c
applications/mesh_controller/: CMakeLists.txt  Kconfig
applications/mesh_controller/configuration/common/: key_id.h
applications/mesh_controller/configuration/nrf52_adafruit_feather/: app_ZDebug.conf  buttons_def.h  dts.overlay  port_state_def.h
applications/mesh_controller/src/: main.c
applications/mesh_controller/src/events/: CMakeLists.txt  Kconfig  ble_event.c  ble_event.h  button_event.c  button_event.h  module_state_event.c
applications/mesh_controller/src/hw_interface/: CMakeLists.txt  Kconfig  Kconfig.buttons  board.c  buttons.c
applications/mesh_controller/src/modules/: CMakeLists.txt  Kconfig  Kconfig.ble  ble_state.c
applications/mesh_leds/: CMakeLists.txt  prj.conf
applications/mesh_leds/include/: model_handler.h  prov_handler.h
applications/mesh_leds/src/: app_ledstrip.c  main.c  model_handler.c  prov_handler.c
applications/mesh_sensor/: CMakeLists.txt  Kconfig
applications/mesh_sensor/configuration/common/: gpio_pins.h  led_effect.h  led_state.h  port_state.h
applications/mesh_sensor/configuration/thingy52_nrf52832/: app_ZDebug.conf  battery_def.h  buttons_def.h  led_state_def.h  leds_def.h  port_state_def.h
applications/mesh_sensor/src/events/: CMakeLists.txt  Kconfig  battery_event.c  battery_event.h  button_event.c  button_event.h  led_event.c  led_event.h  module_state_event.c  power_event.c  sensor_event.c  sensor_event.h
applications/mesh_sensor/src/hw_interface/: CMakeLists.txt  Kconfig  Kconfig.battery_charger  Kconfig.battery_meas  Kconfig.buttons  Kconfig.leds  Kconfig.sensors  battery_charger.c  battery_meas.c  board.c  buttons.c  env_sensors.c  leds.c
applications/mesh_sensor/src/modules/: CMakeLists.txt  Kconfig  Kconfig.ble  Kconfig.led_state  Kconfig.power_manager  Kconfig.settings_loader  Kconfig.shell  ble_state.c  led_state.c  power_manager.c  settings_loader.c  shell.c
applications/network_sensor/: CMakeLists.txt  Kconfig  prj.conf
applications/network_sensor/configuration/adafruit_feather_stm32f405/: app_ZDebug.conf  dts.overlay  led_state_def.h  leds_def.h
applications/network_sensor/configuration/common/: gpio_pins.h  led_effect.h  led_state.h
applications/network_sensor/src/: main.c
applications/network_sensor/src/events/: CMakeLists.txt  Kconfig  button_event.c  button_event.h  config_event.c  config_event.h  led_event.c  led_event.h  module_state_event.c  power_event.c  usb_event.c  usb_event.h
applications/network_sensor/src/hw_interface/: CMakeLists.txt  Kconfig  Kconfig.buttons  Kconfig.display  Kconfig.leds  buttons.c  display.c  env_sensors.c  leds.c
applications/network_sensor/src/modules/: CMakeLists.txt  Kconfig  Kconfig.settings_loader  Kconfig.usb_state  settings_loader.c  usb_state.c
boards/shields/enviroplus_featherwing/: Kconfig.defconfig  Kconfig.shield  enviroplus_featherwing.overlay
boards/shields/oled_featherwing/: Kconfig.defconfig  Kconfig.shield  oled_featherwing.overlay
cmake/: boilerplate.cmake  multi_image.cmake  partition_manager.cmake  reports.cmake  s1.cmake
drivers/: CMakeLists.txt  Kconfig
drivers/seesaw/: Kconfig  seesaw.c  seesaw.h  seesaw_trigger.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/seesaw/: CMakeLists.txt  Kconfig  seesaw.c  seesaw.h  seesaw_trigger.c
drivers/sensor/sensor_sim/: CMakeLists.txt  Kconfig
dts/bindings/: adafruit,seesaw.yaml
dts/bindings/gpio/: adafruit-feather.yaml
dts/bindings/sensor/: adafruit,seesaw.yaml
include/bluetooth/mesh/: sensor_cli.h
include/drivers/: seesaw.h
include/sensor/: seesaw.h
lib/: CMakeLists.txt  Kconfig
scripts/: partition_manager.py  requirements-ci.txt  requirements.txt
subsys/: CMakeLists.txt  Kconfig
subsys/bluetooth/mesh/: sensor_cli.c  sensor_srv.c
subsys/debug/: CMakeLists.txt  Kconfig
subsys/event_manager/: CMakeLists.txt  Kconfig  event_manager.c  event_manager_shell.c
subsys/fw_metadata/: fw_metadata.c
(+108 files in other folders)
